css/style.css
@import url("http://fonts.googleapis.com/css?family=Raleway:300,700");

/*Colors
Background Off Black Color: #181717
Accent Blue:  #00cdcf;
*/


/*Begin Borders*/


/* nav {
  border: solid red 4px;
}
section {
  border: dotted black 2px;
}
div {
  border: dashed green 1px;
}
img {
  border: solid 6px purple;
} */


/*End Borders*/


/* Box Model */

	*, *:before, *:after {
		-moz-box-sizing: border-box;
		-webkit-box-sizing: border-box;
		box-sizing: border-box;
	}

/*Background Color and text override*/
body {
    font-family: Raleway;
}
#banner {
    background-color: #00cdcf;
    box-sizing: border-box;
    color: #ffffff;
    text-align: center;
    display: block;
    font-family: Raleway;
    font-size: 1em;
    font-weight: 300;
    letter-spacing: 1.32px;
    line-height: 1.5em;
    padding: 44px 22px 14.6667px 22px;
    width: 100%;
}

#banner h2 {
    font-family: Raleway;
    font-size: 4em;
}


.myself img {
    width: 125px;
    height: 200px;
    border-radius: 5px 20px 5px;
}

.aboutMe, .inner {
    font-family: Raleway;
}
.content-header {
    text-align: center;
}

.major h2 {
    text-align: center;
}

.contact {
    background-color: #f7f7f7;
    box-sizing: border-box;
    color: #444;
    text-align: center;
    display: block;
    font-family: Raleway;
    font-size: 1em;
    font-weight: 300;
    letter-spacing: 1.32px;
    line-height: 1.5em;
    padding: 44px 22px 14.6667px 22px;
    width: 100%;
}

.aboutMe {
    text-align: center;
}

.features {
    display: flex;
    flex-flow: column;
    align-items: space-between;
    text-align: center;
    font-family: Raleway;
}

.eatupImg {
    width :24em;
    height:20em;
}

.issTrackerImg {
    height: 533px;
    width: 300px;
}

.contact-container {
    display: flex;
    flex-flow: column;
    align-items: space-between;
    margin: 0 4em;
}
.nameInput, .emailInput {
    margin: 2% auto;
    width: 40%;
}
.messageInput textarea {
    margin: 2% auto;
    width: 40%;
    height: 10%
}
.skillset-header {
    text-align: center;
}
.skillset {
    display: flex;
    align-items: center;
    flex-direction: row;
    flex-wrap: wrap;
    margin-bottom: 2em;
    /* TODO: fix so that i use flex alone to wrap content in a row */
    /*text-align: center;*/
}

.skill {
    margin: 0 1em;
}

.skill img {
    height: 5em;
    width: 5em;
}

/* BEGIN FOOTER */
footer {
  background-color: #00cdcf;
  text-align: center;
  margin: 0 auto;
  border-top: solid 3px #00cdcf;
  border-width: 50%;
  color: #181717;
  padding-bottom: 1em;
}

footer h4 {
  font-size: 1.25em;
}

footer li {
  list-style-type: none;
  display: inline-block;
  padding: 0 20px;
}
footer a {
  color: #181717;
}
.social {
  padding: 0;
}
/* END FOOTER */

/* BEGIN MEDIA QUERIES */
@media only screen and (max-width: 980px) {
  .one {
    font-size: .75em;
  }
}
@media only screen and (max-width: 1650px) {
  .project-images li {
    width: 100%;
  }
}
/* END MEDIA QUERIES */




/*//////////////////////////////////////////////////////////////*/

